# takeoff-calculator

./: CLAUDE.md  Cargo.toml  PRD.md  README.md  biome.json  features.md  index.js  lint-staged.config.js  package.json  pnpm-lock.yaml  turbo.json
.changeset/: breezy-wolves-float.md  config.json  cyan-geckos-notice.md  fancy-banks-train.md  fruity-plums-turn.md  late-sloths-wink.md  olive-meteors-learn.md  pink-parrots-join.md  pretty-sheep-lose.md  quiet-toes-lead.md  ready-rings-worry.md  slimy-news-talk.md  ten-bushes-type.md  ten-ears-bake.md  tender-bottles-work.md
.cursor/plans/: contour_3d_surface_mesh_233d08fa.plan.md  volumetric_cut_fill_calculation_4bc47e28.plan.md
.github/workflows/: CI.yml
RFCs/: RFC-001-Typed-Error-Handling.md  RFC-002-Scale-and-Units-Foundation.md  RFC-003-Conversion-and-Measurement-Kinds.md  RFC-004-Groups-and-Aggregates.md  RFC-005-Node-and-WASI-Bindings.md  RFC-006-Performance-Benchmark-Suite.md  RFC-007-Accuracy-Validation.md  RFC-008-Additional-Units.md  RFC-009-Centroid-Reposition.md  RFCS.md  implementation-prompt-RFC-008.md  implementation-prompt-RFC-009.md
apps/sample-app/: CHANGELOG.md  package.json  turbo.json  vite.config.ts
apps/sample-app/src/: App.tsx
apps/sample-app/src/components/contour/: index.tsx  test-data.tsx
crates/takeoff_core/: Cargo.toml
crates/takeoff_core/src/: contour.rs  coords.rs  error.rs  lib.rs  measurement.rs  scale.rs  state.rs  unit.rs  utils.rs  volume.rs
docs/plans/: 2026-02-12-update-contour-input-design.md  2026-02-12-update-contour-input.md
src/: scale.rs
