
[package]
edition = "2021"
name = "takeoff_calculator"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies.napi]
version = "3.8.2"
features = ["full"]

[dependencies.napi-derive]
version = "3.5.1"
features = ["type-def"]

[dependencies.uom]
version = "0.37.0"
default-features = false
features = ["autoconvert","f64","f32","si","serde"]

[dependencies.geo]
version = "0.31.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["v4","serde","js"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
