[workspace]
members = ["crates/takeoff_core", "packages/bindings"]
resolver = "2"


[workspace.dependencies]
napi = { version = "3.8.2", features = ["full", "async"] }
napi-derive = { version = "3.5.1", features = ["type-def"] }
uom = { version = "0.37.0", default-features = false, features = [
  "autoconvert",
  "f64",
  "f32",
  "si",
  "serde",
] }
geo = { version = "0.31.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
takeoff_core = { path = "crates/takeoff_core" }
tokio = { version = "1", features = ["rt", "time"] }
